trunk/Archive2/95/5687f6eb4028ae/output
main.cpp: In function 'void f(const int&)':
main.cpp:9:4: error: assignment of read-only location '* i'
 *i = 16;}
    ^
